--- a/formulario.html
+++ b/formulario.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Fomulario</h1>
+        <h1>Formulario</h1>
     </header>
     <main>
         <form action="" method="post">
